<?xml version="1.0"?>
<package format="2">

  <name>o3d3xx</name>
  <version>0.2.5</version>
  <description>O3D3xx ToF Camera ROS package</description>
  <maintainer email="tom@loveparkrobotics.com">Tom Panzarella</maintainer>
  <license>Apache 2</license>
  <author email="tom@loveparkrobotics.com">Tom Panzarella</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>cv_bridge</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>message_generation</depend>

  <test_depend>rostest</test_depend>

</package>
